--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
               <fieldset class="row mt-4">
                 <div class="form-group">
                   <h3>Add a new task</h3>
-                  <input type="text" class="form-control" placeholder="Type a new exiting task to your list" id="inputDefault" name="task"/>
+                  <input type="text" class="form-control" placeholder="Type a new exciting task to your list" id="inputDefault" name="task"/>
                 </div>
               </fieldset>
               <fieldset class="row mt-4">
